[package]
name = "dwallet-classgroups-types"
edition = "2024"
version.workspace = true

[dependencies]
dwallet-rng.workspace = true
class_groups = { workspace = true, features = ["parallel"] }
group.workspace = true
crypto-bigint.workspace = true
serde.workspace = true
ika-types.workspace = true
twopc_mpc.workspace = true

[lints]
workspace = true