[package]
name = "dwallet-mpc-centralized-party"
edition = "2021"
version.workspace = true

[dependencies]
mpc.workspace = true
twopc_mpc.workspace = true
commitment = { git = "https://github.com/dwallet-labs/cryptography-private", rev = "72a2cc7a" }
shared_wasm_class_groups = { path = "../shared-wasm-class-groups" }
class_groups.workspace = true
group.workspace = true
homomorphic_encryption.workspace = true
dwallet-mpc-types.workspace = true
schemars.workspace = true
anyhow.workspace = true
bcs.workspace = true
getrandom = { version = "0.3" , features = ["wasm_js"] }
rand_core = "0.9"
rand_chacha = "0.9"
serde = { version = "1.0", features = ["derive"] }
crypto-bigint.workspace = true

[lints]
workspace = true
