[package]
name = "dwallet-mpc-centralized-party"
edition = "2021"
version.workspace = true

[dependencies]
mpc.workspace = true
twopc_mpc.workspace = true
commitment = { git = "https://github.com/dwallet-labs/cryptography-private", rev = "11fd8dcf" }
shared_wasm_class_groups = { path = "../shared-wasm-class-groups" } # TODO: no parallel?  features = ["threshold"]
class_groups.workspace = true
group.workspace = true
homomorphic_encryption.workspace = true
dwallet-mpc-types.workspace = true
schemars.workspace = true
anyhow.workspace = true
bcs.workspace = true
rand_core = { version = "0.9", default-features = false }
rand_chacha = { version = "0.9", default-features = false }
getrandom = { version = "0.2.16", features = ["js"], optional = true } # TODO: idk why, but we need this, also this is old version
serde = { version = "1.0", features = ["derive"] }
crypto-bigint.workspace = true

[features]
wasm_js = ["group/wasm_js", "dep:getrandom"]

[lints]
workspace = true

[patch.crates-io]
sha2 = { git = 'https://github.com/RustCrypto/hashes.git', tag = "sha2-v0.11.0-rc.0" }
sha3 = { git = 'https://github.com/RustCrypto/hashes.git', tag = "sha3-v0.11.0-rc.0" }
digest = { git = 'https://github.com/RustCrypto/traits.git', tag = "digest-v0.11.0-rc.0" }
signature = { git = 'https://github.com/RustCrypto/traits.git', tag = "signature-v3.0.0-rc.1" }
curve25519-dalek = { git = 'https://github.com/dalek-cryptography/curve25519-dalek', rev = "b7e4fc0" }
crypto-bigint = { git = 'https://github.com/erik-3milabs/crypto-bigint.git', rev = "640aacb" }
