[package]
name = "dwallet-mpc-centralized-party"
edition = "2024"
version.workspace = true

[dependencies]
mpc.workspace = true
twopc_mpc.workspace = true
commitment = { git = "https://github.com/dwallet-labs/cryptography-private", rev = "73059c2" }
message-digest = { path = "../message-digest" }
class_groups.workspace = true
group.workspace = true
homomorphic_encryption.workspace = true
dwallet-mpc-types.workspace = true
schemars.workspace = true
anyhow.workspace = true
bcs.workspace = true
rand_core = { version = "0.9", default-features = false }
rand_chacha = { version = "0.9", default-features = false }
getrandom = { version = "0.2.16", features = ["js"], optional = true } # TODO: idk why, but we need this, also this is old version
serde = { version = "1.0", features = ["derive"] }

[features]
wasm_js = ["group/wasm_js", "dep:getrandom"]

[lints]
workspace = true
