[package]
name = "dwallet-mpc-types"
edition = "2021"
version.workspace = true

[dependencies]
bcs.workspace = true
serde.workspace = true
move-core-types.workspace = true
rand_chacha = "0.3.1"
fastcrypto = { workspace = true, features = ["copy_key"] }
twopc_mpc.workspace = true
anyhow.workspace = true
serde_json.workspace = true
thiserror.workspace = true
group.workspace = true
schemars.workspace = true

[lints]
workspace = true