[package]
name = "dwallet-mpc-types"
edition = "2021"
version.workspace = true

[dependencies]
bcs.workspace = true
serde.workspace = true
move-core-types.workspace = true
anyhow.workspace = true
serde_json.workspace = true
thiserror.workspace = true
schemars.workspace = true
tracing.workspace = true

[lints]
workspace = true
