[package]
name = "dwallet-mpc"
edition = "2021"
version.workspace = true

[dependencies]
mpc = { path = "../../../cryptography-private/mpc" }
twopc_mpc = { path = "../../../cryptography-private/2pc-mpc", features = ["secp256k1", "bulletproofs", "class_groups", "paillier"] }
anyhow.workspace = true
bcs.workspace = true
rand_core = "0.6.4"

[lints]
workspace = true
