[package]
name = "dwallet-rng"
edition = "2024"
version.workspace = true

[dependencies]
merlin.workspace = true
group.workspace = true
commitment.workspace = true
mpc.workspace = true
fastcrypto.workspace = true
ika-types.workspace = true
rand_chacha.workspace = true
serde.workspace = true
zeroize = "1.8.1"

[lints]
workspace = true