[package]
name = "eth-light-client"
edition = "2021"
version.workspace = true

[dependencies]
helios.workspace = true
serde.workspace = true
anyhow.workspace = true
hex.workspace = true
ethers.workspace = true
sha3.workspace = true
sui-sdk.workspace = true
bcs.workspace = true
eyre.workspace = true
sui-types.workspace = true
byteorder.workspace = true
chrono.workspace = true
tracing.workspace = true
ssz_rs.workspace = true
milagro_bls.workspace = true
sui-json-rpc-types.workspace = true