[package]
name = "ika-analytics-indexer"
version.workspace = true
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"


[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bcs.workspace = true
byteorder.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
csv.workspace = true
move-core-types.workspace = true
object_store.workspace = true
num_enum.workspace = true
prometheus.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
url.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
parquet.workspace = true
arrow-array.workspace = true
fastcrypto = { workspace = true, features = ["copy_key"] }
mysten-metrics.workspace = true
ika-analytics-indexer-derive.workspace = true
ika-data-ingestion-core.workspace = true
ika-indexer.workspace = true
eyre.workspace = true
tempfile.workspace = true
ika-types.workspace = true
telemetry-subscribers.workspace = true
ika-rest-api.workspace = true
ika-storage.workspace = true
ika-config.workspace = true
typed-store.workspace = true
move-binary-format.workspace = true
move-bytecode-utils.workspace = true
ika-json-rpc-types.workspace = true
ika-package-resolver.workspace = true
simulacrum.workspace = true
arrow.workspace = true
gcp-bigquery-client = "0.18.0"
snowflake-api.workspace = true
tap.workspace = true

[dev-dependencies]

[[bin]]
name = "ika-analytics-indexer"
path = "src/main.rs"
