[package]
name = "ika-archival"
version.workspace = true
edition = "2021"
publish = false
license = "BSD-3-Clause-Clear"
authors = ["Mysten Labs <build@mystenlabs.com>"]

[dependencies]
indicatif.workspace = true
anyhow.workspace = true
serde.workspace = true
byteorder.workspace = true
tracing.workspace = true
bytes.workspace = true
num_enum.workspace = true
futures.workspace = true
rand.workspace = true
object_store.workspace = true
prometheus.workspace = true
ika-config.workspace = true
ika-types = { workspace = true }
sui-storage.workspace = true
fastcrypto = { workspace = true, features = ["copy_key"] }
tokio = { workspace = true, features = ["full"] }
serde_json = "1.0.95"

[dev-dependencies]
tempfile.workspace = true
more-asserts.workspace = true
tokio = { workspace = true, features = ["test-util"] }
fastcrypto.workspace = true
ika-swarm-config.workspace = true

[target.'cfg(msim)'.dependencies]
sui-simulator.workspace = true
