[package]
name = "ika-benchmark"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "BSD-3-Clause-Clear"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true
tokio = { workspace = true, features = ["full"] }
strum.workspace = true
strum_macros.workspace = true
tracing.workspace = true
clap.workspace = true
prometheus.workspace = true
rand.workspace = true
indicatif.workspace = true
duration-str.workspace = true
hdrhistogram.workspace = true
comfy-table.workspace = true
bcs.workspace = true
tokio-util.workspace = true
ika-core.workspace = true
ika-config.workspace = true
ika-network.workspace = true
ika-storage.workspace = true
ika-types.workspace = true
ika-sdk.workspace = true
ika-keys.workspace = true
ika-json-rpc-types.workspace = true
ika-protocol-config.workspace = true
ika-test-transaction-builder.workspace = true
ika-swarm-config.workspace = true
ika-surfer.workspace = true
telemetry-subscribers.workspace = true
roaring.workspace = true
regex.workspace = true
fastcrypto-zkp.workspace = true

mysten-metrics.workspace = true
test-cluster.workspace = true
sysinfo.workspace = true

[target.'cfg(msim)'.dependencies]
ika-framework.workspace = true
ika-framework-snapshot.workspace = true
ika-macros.workspace = true
ika-simulator.workspace = true
typed-store.workspace = true
