[package]
name = "ika-bridge-cli"
version.workspace = true
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
ethers = "2.0"
ika-bridge.workspace = true
ika-sdk.workspace = true
ika-types.workspace = true
ika-config.workspace = true
ika-keys.workspace = true
ika-json-rpc-types.workspace = true
shared-crypto.workspace = true
fastcrypto.workspace = true
move-core-types.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
telemetry-subscribers.workspace = true
reqwest.workspace = true
futures.workspace = true
