[package]
name = "ika-bridge-indexer"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
serde.workspace = true
tap.workspace = true
diesel = { workspace = true, features = ["serde_json"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
ethers = { version = "2.0", features = ["rustls", "ws"] }
rayon = "1.10.0"
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
futures.workspace = true
async-trait.workspace = true
bcs.workspace = true
bin-version.workspace = true
clap.workspace = true
mysten-metrics.workspace = true
prometheus.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
strum_macros.workspace = true
ika-bridge.workspace = true
ika-sdk.workspace = true
ika-json-rpc-types.workspace = true
ika-data-ingestion-core.workspace = true
ika-pg-temp-db.workspace = true
ika-types.workspace = true
telemetry-subscribers.workspace = true
tracing.workspace = true
backoff.workspace = true
ika-config.workspace = true
tempfile.workspace = true
ika-indexer-builder.workspace = true

[dev-dependencies]
ika-types = { workspace = true, features = ["test-utils"] }
ika-test-transaction-builder.workspace = true
test-cluster.workspace = true
hex-literal = "0.3.4"
ika-indexer.workspace = true
diesel_migrations = "2.2.0"
ika-indexer-builder = { workspace = true, features = ["test-utils"] }
ika-bridge = { workspace = true, features = ["test-utils"] }

[[bin]]
name = "bridge-indexer"
path = "src/main.rs"
