[package]
name = "ika-cluster-test"
version.workspace = true
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "BSD-3-Clause-Clear"
publish = false
edition = "2024"

[dependencies]
futures.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
jsonrpsee.workspace = true
tracing.workspace = true
clap.workspace = true
reqwest.workspace = true
async-trait.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
uuid.workspace = true
prometheus.workspace = true
fastcrypto.workspace = true
shared-crypto.workspace = true
derive_more = { workspace = true, features = ["debug"] }
regex.workspace = true

ika-indexer.workspace = true
ika-faucet.workspace = true
ika-graphql-rpc.workspace = true
ika-pg-temp-db.workspace = true
ika-swarm.workspace = true
ika-swarm-config.workspace = true
ika-json-rpc-types.workspace = true
ika-sdk.workspace = true
ika-keys.workspace = true
ika-types.workspace = true
ika-core.workspace = true
ika-json.workspace = true
ika-config.workspace = true
ika-test-transaction-builder.workspace = true
telemetry-subscribers.workspace = true

test-cluster.workspace = true
