[package]
name = "ika-core"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
arc-swap.workspace = true
async-trait.workspace = true
axum.workspace = true
bcs.workspace = true
bytes.workspace = true
chrono.workspace = true
consensus-core.workspace = true
consensus-config.workspace = true
count-min-sketch.workspace = true
dashmap.workspace = true
diffy = { version = "0.3", default-features = false }
either.workspace = true
enum_dispatch.workspace = true
eyre.workspace = true
futures.workspace = true
im.workspace = true
indexmap.workspace = true
itertools.workspace = true
jsonrpsee.workspace = true
lru.workspace = true
mockall.workspace = true
num_cpus.workspace = true
object_store.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
rand.workspace = true
roaring.workspace = true
rayon.workspace = true
reqwest.workspace = true
scopeguard.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
signature.workspace = true
static_assertions.workspace = true
tap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "tracing", "test-util"] }
tokio-retry.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
twox-hash.workspace = true

anemo.workspace = true
fastcrypto.workspace = true
fastcrypto-tbls.workspace = true
fastcrypto-zkp.workspace = true
move-binary-format.workspace = true
move-bytecode-utils.workspace = true
move-core-types.workspace = true
move-package.workspace = true
move-symbol-pool.workspace = true
mysten-common.workspace = true
mysten-network.workspace = true
telemetry-subscribers.workspace = true
typed-store.workspace = true

mysten-metrics.workspace = true
narwhal-types.workspace = true
shared-crypto.workspace = true
ika-archival.workspace = true
ika-config.workspace = true
ika-authority-aggregation.workspace = true
ika-execution = { path = "../../ika-execution" }
ika-framework.workspace = true
ika-swarm-config.workspace = true
ika-genesis-builder.workspace = true
ika-json-rpc-types.workspace = true
ika-macros.workspace = true
ika-move-build.workspace = true
ika-network.workspace = true
ika-protocol-config.workspace = true
ika-transaction-checks.workspace = true
ika-simulator.workspace = true
ika-storage.workspace = true
ika-tls.workspace = true
ika-types.workspace = true
zeroize.workspace = true
nonempty.workspace = true

[dev-dependencies]
clap.workspace = true
criterion.workspace = true
expect-test.workspace = true
fs_extra.workspace = true
more-asserts.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
serde-reflection.workspace = true
serde_yaml.workspace = true
num-bigint = "0.4.4"

move-symbol-pool.workspace = true

ika-test-transaction-builder.workspace = true
ika-types = { workspace = true, features = ["test-utils"] }
ika-move.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
pprof.workspace = true
test-fuzz.workspace = true

ika-macros.workspace = true
ika-protocol-config.workspace = true

# moka uses `quanta` by default for timing, which is not compatible with the simulator
[target.'cfg(msim)'.dependencies]
moka = { workspace = true, default-features = false, features = [
    "sync",
    "atomic64",
] }
[target.'cfg(not(msim))'.dependencies]
moka = { workspace = true, features = ["sync"] }

[[example]]
name = "generate-format"
path = "src/generate_format.rs"
test = false

[[bench]]
name = "verified_cert_cache_bench"
harness = false

[[bench]]
name = "batch_verification_bench"
harness = false

[features]
test-utils = []
