[package]
name = "ika-core"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "BSD-3-Clause-Clear"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]
k256.workspace = true
group.workspace = true
mpc.workspace = true
twopc_mpc.workspace = true
homomorphic_encryption.workspace = true
class_groups.workspace = true
dwallet-classgroups-types.workspace = true
schemars.workspace = true
commitment = { git = "https://github.com/dwallet-labs/cryptography-private", subdir = "commitment", rev = "abac7c5"}
shared_wasm_class_groups = { path = "../shared-wasm-class-groups" }
rand_core = "0.6.4"
crypto-bigint = { workspace = true, features = ["rand_core", "serde"], default-features = false }
dwallet-mpc-types.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
arc-swap.workspace = true
async-trait.workspace = true
axum.workspace = true
bcs.workspace = true
bytes.workspace = true
chrono.workspace = true
consensus-core.workspace = true
consensus-config.workspace = true
count-min-sketch.workspace = true
dashmap.workspace = true
diffy = { version = "0.3", default-features = false }
either.workspace = true
enum_dispatch.workspace = true
eyre.workspace = true
futures.workspace = true
im.workspace = true
indexmap.workspace = true
itertools.workspace = true
jsonrpsee.workspace = true
lru.workspace = true
mockall.workspace = true
num_cpus.workspace = true
object_store.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
rand.workspace = true
roaring.workspace = true
rayon.workspace = true
reqwest.workspace = true
scopeguard.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
signature.workspace = true
static_assertions.workspace = true
tap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "tracing", "test-util"] }
tokio-retry.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
twox-hash.workspace = true

anemo.workspace = true
fastcrypto.workspace = true
fastcrypto-tbls.workspace = true
fastcrypto-zkp.workspace = true
move-binary-format.workspace = true
move-bytecode-utils.workspace = true
move-core-types.workspace = true
move-package.workspace = true
move-symbol-pool.workspace = true
mysten-common.workspace = true
mysten-network.workspace = true
mysten-metrics.workspace = true
telemetry-subscribers.workspace = true
typed-store.workspace = true

shared-crypto.workspace = true
ika-config.workspace = true
ika-swarm-config.workspace = true
sui-macros.workspace = true
sui-move-build.workspace = true
ika-network.workspace = true
ika-protocol-config.workspace = true
sui-protocol-config.workspace = true
sui-transaction-checks.workspace = true
sui-simulator.workspace = true
sui-storage.workspace = true
sui-tls.workspace = true
ika-types.workspace = true
zeroize.workspace = true
nonempty.workspace = true

ika-sui-client.workspace = true
ika-move-packages.workspace = true
sui-json-rpc-api.workspace = true
sui-json-rpc-types.workspace = true
sui-sdk.workspace = true
sui-types.workspace = true
sui-keys.workspace = true
num_enum.workspace = true
strum_macros.workspace = true
derive_more.workspace = true
backoff.workspace = true
sha3 = "0.10.8"
sha2 = "0.10.8"
base64 = "0.22.1"


[dev-dependencies]
clap.workspace = true
criterion.workspace = true
expect-test.workspace = true
fs_extra.workspace = true
more-asserts.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
serde-reflection.workspace = true
serde_yaml.workspace = true
num-bigint = "0.4.4"

move-symbol-pool.workspace = true

sui-test-transaction-builder.workspace = true
ika-types = { workspace = true, features = ["test-utils"] }
sui-move.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
pprof.workspace = true
test-fuzz.workspace = true

sui-macros.workspace = true
ika-protocol-config.workspace = true

# moka uses `quanta` by default for timing, which is not compatible with the simulator
[target.'cfg(msim)'.dependencies]
moka = { workspace = true, default-features = false, features = [
    "sync",
    "atomic64",
] }
[target.'cfg(not(msim))'.dependencies]
moka = { workspace = true, features = ["sync"] }

[[example]]
name = "generate-format"
path = "src/generate_format.rs"
test = false

[[bench]]
name = "verified_cert_cache_bench"
harness = false

[[bench]]
name = "batch_verification_bench"
harness = false

[features]
test-utils = []
# This feature must be enabled for release builds!
# If it is not enabled, then we will receive dWallet MPC sessions even if the network key is not set.
# The network DKG pauses the manager from advancing any MPC sessions if the network key is not initialized.
# This feature allows bypassing this restriction, enabling development without relying on the network DKG.
with-network-dkg = []
