[package]
name = "ika-core"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "BSD-3-Clause-Clear"
publish = false
edition = "2024"

[lints]
workspace = true

[dependencies]
group.workspace = true
mpc.workspace = true
twopc_mpc.workspace = true
homomorphic_encryption.workspace = true
class_groups = { workspace = true, features = ["threshold", "parallel"]}
dwallet-rng.workspace = true
dwallet-classgroups-types.workspace = true
commitment.workspace = true
message-digest = { path = "../message-digest" }
rand_core = "0.9"
dwallet-mpc-types.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
arc-swap.workspace = true
async-trait.workspace = true
bcs.workspace = true
chrono.workspace = true
consensus-core.workspace = true
consensus-config.workspace = true
dashmap.workspace = true
enum_dispatch.workspace = true
eyre.workspace = true
futures.workspace = true
itertools.workspace = true
lru.workspace = true
mockall.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
rand.workspace = true
rand_chacha.workspace = true
roaring.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
static_assertions.workspace = true
tap.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full", "tracing", "test-util"] }
tracing.workspace = true

anemo.workspace = true
fastcrypto.workspace = true
move-core-types.workspace = true
mysten-common.workspace = true
mysten-metrics.workspace = true
telemetry-subscribers.workspace = true
typed-store.workspace = true

shared-crypto.workspace = true
ika-config.workspace = true
sui-macros.workspace = true
ika-network.workspace = true
ika-protocol-config.workspace = true
sui-protocol-config.workspace = true
sui-simulator.workspace = true
ika-types.workspace = true

ika-sui-client.workspace = true
sui-json-rpc-types.workspace = true
sui-sdk.workspace = true
sui-types.workspace = true
backoff.workspace = true

[dev-dependencies]
ika-types = {workspace = true, features = ["test_helpers"]}
class_groups = { workspace = true, features = ["threshold", "parallel", "test_helpers"]}

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
pprof.workspace = true
test-fuzz.workspace = true

sui-macros.workspace = true
ika-protocol-config.workspace = true

# moka uses `quanta` by default for timing, which is not compatible with the simulator
[target.'cfg(msim)'.dependencies]
moka = { workspace = true, default-features = false, features = [
    "sync",
    "atomic64",
] }
[target.'cfg(not(msim))'.dependencies]
moka = { workspace = true, features = ["sync"] }

[features]
test-utils = []
enforce-minimum-cpu = []
