[package]
name = "ika-cost"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
ika-types.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
bcs.workspace = true

[dev-dependencies]
insta.workspace = true
test-cluster.workspace = true
ika-config.workspace = true
ika-swarm-config.workspace = true
ika-test-transaction-builder.workspace = true
ika-move-build.workspace = true
move-cli.workspace = true
move-disassembler.workspace = true
ika-json-rpc-types.workspace = true
