[package]
name = "ika-deepbook-indexer"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
serde.workspace = true
tap.workspace = true
diesel = { workspace = true, features = ["serde_json"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
futures.workspace = true
async-trait.workspace = true
bcs.workspace = true
bin-version.workspace = true
clap.workspace = true
mysten-metrics.workspace = true
prometheus.workspace = true
serde_yaml.workspace = true
ika-sdk.workspace = true
ika-json-rpc-types.workspace = true
ika-data-ingestion-core.workspace = true
ika-types.workspace = true
telemetry-subscribers.workspace = true
tracing.workspace = true
backoff.workspace = true
ika-config.workspace = true
ika-indexer-builder.workspace = true
tempfile.workspace = true
axum.workspace = true
bigdecimal = { version = "0.4.5" }

[dev-dependencies]
ika-types = { workspace = true, features = ["test-utils"] }
hex-literal = "0.3.4"

[[bin]]
name = "deepbook-indexer"
path = "src/main.rs"
