[package]
name = "ika-e2e-tests"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"
version.workspace = true

[lints]
workspace = true

[dependencies]

[dev-dependencies]
tempfile.workspace = true
futures.workspace = true
prometheus.workspace = true
fs_extra.workspace = true
indexmap.workspace = true
insta.workspace = true
jsonrpsee.workspace = true
test-cluster.workspace = true
rand.workspace = true
expect-test.workspace = true
tokio.workspace = true
tracing.workspace = true
assert_cmd.workspace = true
serde.workspace = true
bcs.workspace = true
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
serde_json.workspace = true
reqwest.workspace = true
prost.workspace = true

move-binary-format.workspace = true
move-package.workspace = true
telemetry-subscribers.workspace = true
fastcrypto.workspace = true
fastcrypto-zkp.workspace = true
move-core-types.workspace = true

ika-core.workspace = true
ika-framework.workspace = true
ika-json-rpc.workspace = true
ika-json-rpc-api.workspace = true
ika-node.workspace = true
ika-macros.workspace = true
ika-network.workspace = true
ika-simulator.workspace = true
ika-storage.workspace = true
mysten-metrics.workspace = true
ika-tool.workspace = true
ika-protocol-config.workspace = true
ika-types.workspace = true
ika-move-build.workspace = true
ika-swarm-config.workspace = true
ika-swarm.workspace = true
ika-test-transaction-builder.workspace = true
ika-config.workspace = true
ika-json-rpc-types.workspace = true
ika.workspace = true
ika-sdk.workspace = true
ika-keys.workspace = true
ika-rest-api.workspace = true
shared-crypto.workspace = true
ika-sdk-types.workspace = true

passkey-types.workspace = true
passkey-client.workspace = true
passkey-authenticator.workspace = true
coset.workspace = true
url.workspace = true
p256.workspace = true
