[package]
name = "ika-framework-snapshot"
version.workspace = true
edition = "2021"
authors = ["Mysten Labs <eng@mystenlabs.com>"]
description = "Tool to create a bytecode snapshot of the current ika-framework"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow.workspace = true
bcs.workspace = true
serde.workspace = true
serde_json.workspace = true
bin-version.workspace = true

ika-framework.workspace = true
ika-protocol-config.workspace = true
ika-types.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
