[package]
name = "ika-genesis-builder"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bcs.workspace = true
camino.workspace = true
fastcrypto.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
rand.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
tracing.workspace = true
prometheus.workspace = true

shared-crypto.workspace = true
ika-config.workspace = true
ika-execution.workspace = true
ika-framework.workspace = true
ika-framework-snapshot.workspace = true
ika-protocol-config.workspace = true
ika-types.workspace = true
[target.'cfg(msim)'.dependencies]
ika-simulator.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
ika-types = { workspace = true, features = ["test-utils"] }
