[package]
name = "ika-graphql-e2e-tests"
version = "0.1.0"
authors = ["Mysten Labs <eng@mystenlabs.com>"]
description = "End to end tests for Ika GraphQL"
license = "Apache-2.0"
publish = false
edition = "2021"

[lints]
workspace = true

[dev-dependencies]
telemetry-subscribers.workspace = true
datatest-stable.workspace = true
ika-graphql-rpc.workspace = true
ika-transactional-test-runner.workspace = true
tokio.workspace = true

[[test]]
name = "tests"
harness = false

[dependencies]

[target.'cfg(msim)'.dependencies]
msim.workspace = true

[features]
staging = ["ika-graphql-rpc/staging"]
