[package]
name = "ika-graphql-rpc"
version.workspace = true
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"


[dependencies]
anyhow.workspace = true
async-graphql = {workspace = true, features = ["dataloader", "apollo_tracing", "tracing", "opentelemetry"] }
async-graphql-axum.workspace = true
async-graphql-value.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
bin-version.workspace = true
chrono.workspace = true
clap.workspace = true
const-str.workspace = true
diesel = { workspace = true, features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
diesel-async = { workspace = true, features = ["postgres"] }
either.workspace = true
fastcrypto = { workspace = true, features = ["copy_key"] }
fastcrypto-zkp.workspace = true
futures.workspace = true
hex.workspace = true
http.workspace = true
hyper.workspace = true
itertools.workspace = true
lru.workspace = true
move-binary-format.workspace = true
move-disassembler.workspace = true
move-ir-types.workspace = true
mysten-metrics.workspace = true
mysten-network.workspace = true
move-core-types.workspace = true
once_cell.workspace = true
prometheus.workspace = true
rand.workspace = true # todo: cleanup test only deps
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
shared-crypto.workspace = true
similar.workspace = true
ika-pg-temp-db.workspace = true
ika-sdk.workspace = true
ika-types.workspace = true
tap.workspace = true
telemetry-subscribers.workspace = true
tempfile.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-util = { workspace = true, features = ["rt"] }
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
thiserror.workspace = true
uuid.workspace = true
im.workspace = true
downcast = "0.11.0"

ika-graphql-config.workspace = true
ika-graphql-rpc-headers.workspace = true
ika-graphql-rpc-client.workspace = true


# TODO: put these behind feature flag to prevent leakage
# Used for dummy data
bcs.workspace = true
simulacrum.workspace = true  # todo: cleanup test only deps
ika-json-rpc.workspace = true
ika-json-rpc-types.workspace = true
ika-indexer.workspace = true
ika-rest-api.workspace = true
ika-swarm-config.workspace = true
test-cluster.workspace = true
ika-protocol-config.workspace = true
move-bytecode-utils.workspace = true
ika-package-resolver.workspace = true

[dev-dependencies]
expect-test.workspace = true
hyper.workspace = true
insta.workspace = true
serde_json.workspace = true
ika-framework.workspace = true
tower.workspace = true
ika-test-transaction-builder.workspace = true
ika-move-build.workspace = true

[features]
staging = []
